--- a/style.css
+++ b/style.css
@@ -95,6 +95,33 @@ header {
     margin-left: 40px;
 }
 
+/* Referred to a tutorial on youtube for the hamburger menu */
+/* https://www.youtube.com/watch?v=DZg6UfS5zYg */
+
+.hamburgerMenu div {
+    position: absolute;
+    left: -1000px;
+    top: 10px;
+    width: 45px;
+    height: 3px;
+    border-radius: 3px;
+    background: #FFFFFF;
+    }
+
+.hamburgerMenu div::before,
+.hamburgerMenu div::after {
+    position: absolute;
+    content: '';
+    top: -12px;
+    width: 100%;
+    height: 3px;
+    background: #FFFFFF;
+    border-radius: 3px;
+    }
+
+.hamburgerMenu div::after {
+    top: 12px;
+    } 
 
 .bottom h1 {
     float: left;
@@ -318,7 +345,6 @@ footer {
     text-align: center;
 }
 
-/* 1080 pixels */
 
 @media (max-width: 1080px) {
     header {
@@ -329,6 +355,7 @@ footer {
         float: none;
         width: 100%;
         margin: 0 auto;
+        overflow: hidden;
     }
 
     .pandaContentContainer.one, .pandaContentContainer.two {
@@ -341,6 +368,7 @@ footer {
     .pandaImgContainer.one img,
     .pandaImgContainer.two img {
         display: block;
+        margin: -50px 0;
     }
 
     .one h2,
@@ -366,7 +394,6 @@ footer {
     }
     
     .contactNavContainer {
-
         width: 15%;
     }
 }
@@ -392,13 +419,16 @@ footer {
         padding-top: 50px;
         margin-bottom: 50px;
     }
+
     .friendImgContainer {
         position: absolute;
         right: 1000px;
     }
+
     .friendContentContainer {
         width: 100%;
     }
+
     .friendContentContainer p {
         margin-bottom: 40px;
     }
@@ -458,7 +488,9 @@ footer {
     input {
         width: 100%;
         margin-bottom: 10px;
-    }
+        text-align: center;
+        padding-left: 0;
+        }
 
     .contactButtonContainer {
         text-align: center;
@@ -481,6 +513,19 @@ footer {
         text-align: right;
         float: right;
         width: 37.5%;
+    }
+
+
+    .hamburgerMenu div {
+        position: relative;
+        left: 0px;
+        float: right;
+    }
+
+    .top nav {
+        position: absolute;
+        float: none;
+        left: 1000px;
     }
 }
 
